# nd0277-data-engineering-with-microsoft-azure-project-1

./: Project_1B_ Project_Template.ipynb  README.md  event_datafile_new.csv  main.py  pyproject.toml
cassandra/: docker-compose.yml
